--- a/pom.xml
+++ b/pom.xml
@@ -43,24 +43,24 @@
 			<version>3.2.8</version>
 		</dependency>
 		<dependency>
-			<groupId>jackson-annotations</groupId>
-			<artifactId>jackson-annotations</artifactId>
-			<version>2.8.0</version>
-		</dependency>
-		<dependency>
-			<groupId>jackson-core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>2.8.1</version>
-		</dependency>
-		<dependency>
-			<groupId>jackson-databind</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.8.1</version>
-		</dependency>
-		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 			<version>1.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.8.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.8.3</version>
 		</dependency>
 	</dependencies>
 </project>
